# Lego-SAM

./: .gitignore  Dockerfile  evaluation_results.csv  evaluation_results_old.csv  extract_bags.py  grounded_sam2_hf_model_demo.py  lego_08_21_2025_calibration.json  lego_calibrate_alignment.py  lego_infer_node.py  lego_match_sim.py  lego_online_infer.py  lego_seg.py  lego_seg_old.py  lego_segmenter.py  lego_visualize.py  pyproject.toml  requirements.txt  seg_all_sim.sh
crop_calibration/: crop_calibration_05_26_2025.json  crop_calibration_08_21_2025.json
