[project]
name = "lego-sam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "addict>=2.4.0",
    "hydra-core>=1.3.2",
    "iopath>=0.1.10",
    "numpy>=2.2.6",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "pycocotools>=2.0.10",
    "supervision>=0.25.1",
    "timm>=1.0.15",
    "transformers>=4.52.4",
    "websockets>=15.0.1",
    "yapf>=0.43.0",
]
